# daily-investment-brief

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  daily-brief.html  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
agent/: __main__.py  auth.py  config.py  db.py  dependencies.py  indexer.py  llm.py  main.py
agent/agents/: orchestrator.py  tools.py
agent/routers/: auth.py  chat.py  memory.py  pipeline.py  sessions.py  uploads.py
config/: accounts.example.json  accounts.json
docs/: stable-data-sources.md
docs/research/: 2026-07-06-谢佩德骨头-近期观点与AI简报复盘.md
frontend/: .dockerignore  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
pipeline/: __init__.py  cancel.py  capital_daily.py  capital_flow.py  capital_flow_mcp.py  cli.py  config.py  datetime_utils.py  generator.py  html.py  ingest.py  llm.py  models.py  storage.py  workstation.py
scripts/: debug_cookie.py  debug_timeline_detail.py  debug_timeline_full.py  debug_waf_bypass.py  debug_xueqiu.py  docker-start.sh  health_check.sh  init_knowledge_base.py  new_journal_entry.py  new_monthly_review.py  new_weekly_review.py  run_capital_flow_mcp.py  setup.ps1  test_search.py  test_weibo_cookie.py
skill/: README.md
sources/: README.md
templates/: batch_summary_prompt.md  daily_brief_prompt.md  direct_brief_prompt.md  final_brief_prompt.md  macro_weekly_reference_prompt.md  stock_institution_consensus_prompt.md
tests/: test_capital_daily.py  test_capital_flow_mcp.py  test_generator.py  test_llm.py  test_storage.py  test_wechat_manual_urls.py  test_workstation.py
(+280 files in other folders)
