[project]
name = "daily-investment-brief"
version = "0.1.0"
description = "Generate a daily A/H-share investment brief from Markdown or JSON source notes."
requires-python = ">=3.10"
dependencies = [
    "markdown>=3.6",
    "PyYAML>=6.0",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
collect = [
    "playwright>=1.40",
]
agent = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "langchain>=0.2",
    "langchain-community>=0.2",
    "langchain-openai>=0.1",
    "chromadb>=0.5",
    "aiosqlite>=0.20",
    "tavily-python>=0.3",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project.scripts]
daily-brief = "pipeline.cli:main"

[tool.setuptools.packages.find]
include = ["pipeline*", "agent*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
